--- a/app/src/main/res/layout/deposit_dialog.xml
+++ b/app/src/main/res/layout/deposit_dialog.xml
@@ -25,6 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp10"
+            android:id="@+id/nameTxt"
             android:background="@drawable/rect2"
             android:hint="Enter Name"
             android:padding="@dimen/dp10"
@@ -43,6 +44,8 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp10"
             android:layout_marginBottom="@dimen/dp20"
+            android:id="@+id/txtAmt"
+            android:inputType="number"
             android:background="@drawable/rect2"
             android:hint="Amount"
             android:padding="@dimen/dp10"
@@ -57,10 +60,12 @@
             android:textSize="@dimen/small_text_size" />
 
         <EditText
+            android:id="@+id/utrNumbTxt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp10"
             android:layout_marginBottom="@dimen/dp20"
+            android:inputType="text"
             android:background="@drawable/rect2"
             android:hint="Enter UTR Number"
             android:padding="@dimen/dp10"
@@ -79,8 +84,9 @@
             android:layout_height="@dimen/dp200"
             android:background="@drawable/stroke1"
             android:padding="@dimen/dp4"
+            android:id="@+id/btnPickImage"
             android:src="@drawable/ic_baseline_attach_file_24"
-            app:tint="@color/colorPrimary" />
+            />
 
         <LinearLayout
             android:layout_width="match_parent"
